[metadata]
url = http://mriqc.readthedocs.org/
author = Oscar Esteban
author_email = code@oscaresteban.es
maintainer = Oscar Esteban
maintainer_email = code@oscaresteban.es
description = Automated Quality Control and visual reports for Quality Assesment of structural (T1w, T2w) and functional MRI of the brain.
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
install_requires =
    dipy
    jinja2
    matplotlib
    nibabel >= 2.2.1
    nilearn >= 0.2.6, != 0.5.0, != 0.5.1
    nipype >= 1.1.1
    nitime
    niworkflows ~= 0.10.3rc1
    numpy
    pandas>=0.21.0
    pybids ~= 0.9.2
    PyYAML
    scikit-learn>=0.19.0
    scipy
    seaborn
    statsmodels
    svgutils
    templateflow ~= 0.4.1
    xvfbwrapper
test_requires =
    coverage
    mock
    pytest
    pytest-cov == 2.5.1
    pytest-xdist
packages = find:
include_package_data = True

[options.package_data]
mriqc =
    data/*.yml
    data/*.tfm
    data/csv/*.csv
    data/mclf_*.pklz
    data/reports/*.rst
    data/reports/*.html
    data/reports/resources/*
    data/reports/embed_resources/*
    data/tests/*
    data/mni/*.nii.gz

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
classifier =
    xgboost
classifiers =
    %(classifier)s

doc =
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx-argparse
    sphinx_rtd_theme >= 0.2.4
docs =
    %(doc)s

notebook =
    ipython
    jupyter
    nipy
notebooks =
    %(notebook)s

other =
    scikit-image
others =
    %(other)s

test =
    coverage
    mock
    pytest
    pytest-cov == 2.5.1
    pytest-xdist
tests =
    %(test)s

all =
    %(classifier)s
    %(doc)s
    %(notebook)s
    %(test)s

[options.entry_points]
console_scripts =
    mriqc=mriqc.bin.mriqc_run:main
    mriqc_clf=mriqc.bin.mriqc_clf:main
    mriqc_plot=mriqc.bin.mriqc_plot:main
    abide2bids=mriqc.bin.abide2bids:main
    fs2gif=mriqc.bin.fs2gif:main
    dfcheck=mriqc.bin.dfcheck:main
    nib-hash=mriqc.bin.nib_hash:main
    participants=mriqc.bin.subject_wrangler:main
    mriqc_labeler=mriqc.bin.labeler:main
    mriqcwebapi_test=mriqc.bin.mriqcwebapi_test:main

[versioneer]
VCS = git
style = pep440
versionfile_source = mriqc/_version.py
versionfile_build = mriqc/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
