[metadata]
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Automated Quality Control and visual reports for Quality Assesment of structural (T1w, T2w) and functional MRI of the brain.
license = 3-clause BSD
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
maintainer = The NiPreps developers
maintainer_email = nipreps@gmail.com
project_urls =
    Documentation = https://mriqc.readthedocs.io/
    Manuscript = https://doi.org/10.1371/journal.pone.0184661
    Sci Dat Paper = https://doi.org/10.1038/s41597-019-0035-4
    Web API = https://mriqc.nimh.nih.gov/
url = https://github.com/poldracklab/mriqc

[options]
python_requires = >= 3.6
install_requires =
    dipy
    jinja2
    matplotlib
    nibabel >= 3.0.1,<4.0
    nilearn >= 0.2.6, < 0.5.0
    nipype ~= 1.4
    nitime
    niworkflows ~= 1.1.12
    numpy
    pandas >= 0.21.0
    pybids >= 0.10.2
    PyYAML
    scikit-learn>=0.19.0
    scipy
    seaborn
    statsmodels
    svgutils == 0.3.1
    templateflow >= 0.5.2
    toml
    urllib3 <1.24,>=1.21.1

test_requires =
    coverage
    mock
    pytest
    pytest-cov == 2.5.1
    pytest-xdist
packages = find:
include_package_data = True

[options.package_data]
mriqc =
    data/*.yml
    data/*.tfm
    data/csv/*.csv
    data/mclf_*.pklz
    data/reports/*.rst
    data/reports/*.html
    data/reports/resources/*
    data/reports/embed_resources/*
    data/tests/*
    data/mni/*.nii.gz

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
classifier =
    xgboost
classifiers =
    %(classifier)s

doc =
    packaging
    pydot >=1.2.3
    pydotplus
    sphinx >=2.1.2,<3.0
    sphinx-argparse
    sphinx_rtd_theme >=0.2.4
docs =
    %(doc)s

notebook =
    ipython
    jupyter
    nipy
notebooks =
    %(notebook)s

other =
    scikit-image
others =
    %(other)s

test =
    coverage
    mock
    pytest
    pytest-cov == 2.5.1
    pytest-xdist
tests =
    %(test)s

all =
    %(classifier)s
    %(doc)s
    %(notebook)s
    %(test)s

[options.entry_points]
console_scripts =
    mriqc=mriqc.cli.run:main
    mriqc_clf=mriqc.bin.mriqc_clf:main
    mriqc_plot=mriqc.bin.mriqc_plot:main
    abide2bids=mriqc.bin.abide2bids:main
    fs2gif=mriqc.bin.fs2gif:main
    dfcheck=mriqc.bin.dfcheck:main
    nib-hash=mriqc.bin.nib_hash:main
    participants=mriqc.bin.subject_wrangler:main
    mriqc_labeler=mriqc.bin.labeler:main
    mriqcwebapi_test=mriqc.bin.mriqcwebapi_test:main

[versioneer]
VCS = git
style = pep440
versionfile_source = mriqc/_version.py
versionfile_build = mriqc/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
ignore =
    E266
    W503
exclude=*build/
